Bug 314736 - Konqueror does not start browsing URL after pressing enter or hitting "go to"-button
Summary: Konqueror does not start browsing URL after pressing enter or hitting "go to"...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.9.4
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 01:03 UTC by vonbirn
Modified: 2013-02-17 00:39 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:


Attachments
Arrow in pic pointing at the button which does not work either. (38.54 KB, image/jpeg)
2013-02-09 01:03 UTC, vonbirn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description vonbirn 2013-02-09 01:03:14 UTC
Created attachment 77039 [details]
Arrow in pic pointing at the button which does not work either.

Hi,
when I start konqueror, my default starting homepage appears. That's fine so far. Konqueror is able browse the web. However, when I open a new tab and type in a (not necessarily different) URL and hit enter, nothing happens. Konqueror is not starting to browse the URL. Even the "go to"-button does not work. The same is true when I use konqueror as a file manager. It does not open the given path. Are there any options I need to change?

Thank you.
Comment 1 Burkhard Lück 2013-02-09 09:08:07 UTC
Works here with Konqueror 4.10 compiled from souces (open a new tab and type in a URL, hit enter or click the "go to"-button, Konqueror is starting to browse the URL)
Comment 2 Dawit Alemayehu 2013-02-09 15:17:23 UTC
I cannot reproduce this either. Did it stop working after updating/installing new or did it just stop working one day ?
Comment 3 Christoph Feck 2013-02-11 13:45:42 UTC
Works here, too, using master. Does the URL bar get focus? Does it lose focus on hitting Enter?
Comment 4 vonbirn 2013-02-11 19:52:51 UTC
Dear All,

URL line is getting focus but does not lose it after hitting enter. Simply, 
nothing is happening. Same with "go to"-button.

I did not use Konqueror for quite some time. Now I retried it for some reason 
and it does not fire URLs anymore on hitting enter. 

It works when I use the home button for the default homepage. It even browses 
pages from the history when I click on them.

Compared to rekonq, it does not even open the history below the URL line when 
I type in letter by letter.
Comment 5 vonbirn 2013-02-11 20:13:22 UTC
Dear All,

Issue resolved! 

I did a right click in the URL line which gave me the context menu. There, I 
set Text completion (Textvervollständigung) from "none" to "standard". Then it 
worked. Setting it to manually worked also.

However, I do not know why Enter and "go to"-button are disbaled when I set it 
to "none".

Thank you very much.
Comment 6 Dawit Alemayehu 2013-02-12 00:14:30 UTC
I can duplicate the bug if I change the completion mode to 'None' as well. It should not be that way. Something must have changed in the code to cause that. Will have to check that at some point. Thanks for investigation.
Comment 7 Dawit Alemayehu 2013-02-17 00:39:28 UTC
Git commit 1cdbf2e53f1991bd55c09310079f238ea90ee802 by Dawit Alemayehu.
Committed on 16/02/2013 at 17:29.
Pushed by adawit into branch 'KDE/4.10'.

Connect to the returnPressed signal if completionMode == CompletionNone.
FIXED-IN: 4.10.1
REVIEW: 108983

M  +20   -2    konqueror/src/konqcombo.cpp
M  +2    -0    konqueror/src/konqcombo.h

http://commits.kde.org/kde-baseapps/1cdbf2e53f1991bd55c09310079f238ea90ee802