Connect to the returnPressed signal if completionMode == CompletionNone.

BUG: 314736
FIXED-IN: 4.10.1
REVIEW: 108983